--- a/index.html
+++ b/index.html
@@ -102,6 +102,103 @@
         <div class="left-text"> 💬 Download App via SMS</div>
         <div class="right-text">Welcome Gulzaman Arain 👨‍🎓 </div>
     </div>
+
+    <h1 id="sell-car">Sell Your Car on PakWheels and Get the Best Price</h1>
+
+    <div class="container-sell-car">
+        <!-- Lest Section -->
+        <div class="left-box">
+            <h2>Sell It Myself !</h2>
+            <ul>
+                <li> ✔️ Post an ad in 2 minutes</li>
+                <li> ✔️ 20 million users</li>
+                <li> ✔️ Connect directly with buyers</li>
+            </ul>
+            <button class="btn-red">Post Your Add</button>
+        </div>
+        <div class="or-box">
+            <div class="or">OR</div>
+        </div>
+
+        <!-- Right Section -->
+        <div class="right-box">
+            <h2>Sell It For Me</h2>
+            <ul>
+                <li> ✔️ Sell your car without hassle</li>
+                <li> ✔️ Free Inspection & Featured ad</li>
+                <li> ✔️ Maximize offer with sales agent</li>
+            </ul>
+            <button class="btn-blue">Help Me Sell My Car !</button>
+        </div>
+    </div>
+    <div class="browse-used-car">
+        <div class="browse-content">
+            <h1 class="browse">Browse Used Cars</h1>
+            <div class="browse-nav">
+                <ul>
+                    <li>Category</li>
+                    <li>City</li>
+                    <li>Make</li>
+                    <li>Modle</li>
+                    <li>Budget</li>
+                    <li>Body Parts</li>
+                </ul>
+            </div>
+            <div class="car-category-section">
+                <div class="car-grid">
+                    <div class="car-card">
+                        <img src="/pakwheel-img/img1.svg" alt="">
+                        <p>Automatic Car</p>
+                    </div>
+                    <div class="car-card">
+                        <img src="/pakwheel-img/img2.svg" alt="">
+                        <p>Imported Car</p>
+                    </div>
+                    <div class="car-card">
+                        <img src="/pakwheel-img/img3.svg" alt="">
+                        <p>Hybrid Car</p>
+                    </div>
+                    <div class="car-card">
+                        <img src="/pakwheel-img/img4.svg" alt="">
+                        <p>Diesel Car</p>
+                    </div>
+                    <div class="car-card">
+                        <img src="/pakwheel-img/img5.svg" alt="">
+                        <p>Small Car</p>
+                    </div>
+                    <div class="car-card">
+                        <img src="/pakwheel-img/img6.svg" alt="">
+                        <p>Urgent Car</p>
+                    </div>
+                    <div class="car-card">
+                        <img src="/pakwheel-img/img7.svg" alt="">
+                        <p>Jeep</p>
+                    </div>
+                    <div class="car-card">
+                        <img src="/pakwheel-img/img8.svg" alt="">
+                        <p>1000cc Car</p>
+                    </div>
+                    <div class="car-card">
+                        <img src="/pakwheel-img/img9.svg" alt="">
+                        <p>Japanese Car</p>
+                    </div>
+                    <div class="car-card">
+                        <img src="/pakwheel-img/img10.svg" alt="">
+                        <p>Superdari</p>
+                    </div>
+                    <div class="car-card">
+                        <img src="/pakwheel-img/img11.svg" alt="">
+                        <p>2 Door Car</p>
+                    </div>
+                    <div class="car-card">
+                        <img src="/pakwheel-img/img12.svg" alt="">
+                        <p>3 Door Car</p>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
