--- a/index.html
+++ b/index.html
@@ -199,6 +199,155 @@
             </div>
         </div>
     </div>
+
+    <div class="pak">
+        <h1>PakWheels Offerings</h1>
+    </div>
+    <div class="offering-section">
+        <div class="ofering-card">
+            <img src="/pakwheel-img/img13.png" alt="">
+            <div class="section-info">
+                <h1>Pakwheels</h1>
+                <p>SELL IT FOR ME</p>
+            </div>
+        </div>
+        <div class="ofering-card">
+            <img src="/pakwheel-img/img14.png" alt="">
+            <div class="section-info">
+                <h1>Pakwheels</h1>
+                <p>AUCTION SHEET VERIFICATION</p>
+            </div>
+        </div>
+        <div class="ofering-card">
+            <img src="/pakwheel-img/img15.png" alt="">
+            <div class="section-info">
+                <h1>Pakwheels</h1>
+                <p>CAR INSPECTION</p>
+            </div>
+        </div>
+        <div class="ofering-card">
+            <img src="/pakwheel-img/img16.png" alt="">
+            <div class="section-info">
+                <h1>Pakwheels</h1>
+                <p>CAR INSURANCE</p>
+            </div>
+        </div>
+        <div class="ofering-card">
+            <img src="/pakwheel-img/img17.png" alt="">
+            <div class="section-info">
+                <h1>Pakwheels</h1>
+                <p>CAR FINANCE</p>
+            </div>
+        </div>
+        <div class="ofering-card">
+            <img src="/pakwheel-img/img18.png" alt="">
+            <div class="section-info">
+                <h1>Pakwheels</h1>
+                <p>CAR RIGESTRATION</p>
+            </div>
+        </div>
+        <div class="ofering-card">
+            <img src="/pakwheel-img/img19.png" alt="">
+            <div class="section-info">
+                <h1>Pakwheels</h1>
+                <p>OWNERSHIP TRANSFER</p>
+            </div>
+        </div>
+
+    </div>
+
+    <div class="link">
+        <h4>View all managed by PakWheels cars</h4>
+    </div>
+
+    <div class="manage">
+        <h1>Managed by PakWheels</h1>
+    </div>
+    <div class="manage-section">
+        <div class="manage-card">
+            <img src="/pakwheel-img/img20.webp" alt="">
+            <div class="text-info">
+                <h1>Toyota Raize 2021</h1>
+                <h6>PKR 5,400,000</h6>
+                <p>Islamabad</p>
+                <button id="manage">FEATURED</button>
+            </div>
+
+        </div>
+        <div class="manage-card">
+            <img src="/pakwheel-img/img21.webp" alt="">
+            <div class="text-info">
+                <h1>Suzuki Cultus 2018</h1>
+                <h6>PKR 2,750,000</h6>
+                <p>Peshawar</p>
+                <button id="manage">FEATURED</button>
+            </div>
+        </div>
+        <div class="manage-card">
+            <img src="/pakwheel-img/img22.webp" alt="">
+            <div class="text-info">
+                <h1>Honda Civic 2021</h1>
+                <h6>PKR 7,100,000</h6>
+                <p>Multan</p>
+                <button id="manage">FEATURED</button>
+            </div>
+        </div>
+        <div class="manage-card">
+            <img src="/pakwheel-img/img23.webp" alt="">
+            <div class="text-info">
+                <h1>Toyota Corolla 2019</h1>
+                <h6>PKR 4,675,000</h6>
+                <p>Lahore</p>
+                <button id="manage">FEATURED</button>
+            </div>
+        </div>
+    </div>
+
+    <!-- FEATURED SECTION -->
+
+    <div class="feature-header">
+        <h1 class="feature-title">Featured New Cars</h1>
+        <a href="#" class="fea-link">View all managed by PakWheels cars</a>
+    </div>
+    <div class="feature-section">
+        <div class="feature-card">
+            <img src="/pakwheel-img/img20.webp" alt="">
+            <div class="text-info">
+                <h1>Toyota Raize 2021</h1>
+                <h6>PKR 5,400,000</h6>
+                <p>Islamabad</p>
+                <button id="manage">FEATURED</button>
+            </div>
+
+        </div>
+        <div class="feature-card">
+            <img src="/pakwheel-img/img21.webp" alt="">
+            <div class="text-info">
+                <h1>Suzuki Cultus 2018</h1>
+                <h6>PKR 2,750,000</h6>
+                <p>Peshawar</p>
+                <button id="manage">FEATURED</button>
+            </div>
+        </div>
+        <div class="feature-card">
+            <img src="/pakwheel-img/img22.webp" alt="">
+            <div class="text-info">
+                <h1>Honda Civic 2021</h1>
+                <h6>PKR 7,100,000</h6>
+                <p>Multan</p>
+                <button id="manage">FEATURED</button>
+            </div>
+        </div>
+        <div class="feature-card">
+            <img src="/pakwheel-img/img23.webp" alt="">
+            <div class="text-info">
+                <h1>Toyota Corolla 2019</h1>
+                <h6>PKR 4,675,000</h6>
+                <p>Lahore</p>
+                <button id="manage">FEATURED</button>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
